--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 MONGO_URI = mongodb+srv://blindextech:Dul2006@edunexus-cluster.gfbvhsw.mongodb.net/edunexus?retryWrites=true&w=majority&appName=edunexus-cluster
 
+CLOUDINARY_CLOUD_NAME = dmwuhnhd1
+CLOUDINARY_API_KEY = 629386675392299
+CLOUDINARY_API_SECRET = Ya49ABE_Qti9ngQNDz0Uhq2UIt8
