Add user authentication (register/login) backend & frontend
Implemented user registration and login endpoints in the backend using Passport.js local strategy and JWT, including new userController, userRouter, and passport configuration. Updated backend dependencies to include authentication packages and added JWT secret to .env. On the frontend, added Register and Login components, user API service, and integrated routes for user authentication. Also refactored post routes for consistency.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ MONGO_URI = mongodb+srv://blindextech:Dul2006@edunexus-cluster.gfbvhsw.mongodb.n
 CLOUDINARY_CLOUD_NAME = dmwuhnhd1
 CLOUDINARY_API_KEY = 629386675392299
 CLOUDINARY_API_SECRET = Ya49ABE_Qti9ngQNDz0Uhq2UIt8
+
+JWT_SECRET = EduNexusSecret
