Add Google OAuth authentication to user system
Integrated Google OAuth 2.0 authentication in the backend using passport-google-oauth20, added related environment variables, and updated user routes and controller for Google login and authentication checks. Updated frontend login and register components to enable Google login. Added cookie-parser and passport-jwt for JWT handling via cookies.

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,7 @@ CLOUDINARY_API_KEY = 629386675392299
 CLOUDINARY_API_SECRET = Ya49ABE_Qti9ngQNDz0Uhq2UIt8
 
 JWT_SECRET = EduNexusSecret
+
+GOOGLE_CLIENT_ID = 423611856921-ipbfo8s4ts349tv55tfkbl9ivncc23bm.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
