--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "react-select": "^5.10.2",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
   },
