Add email verification flow for user accounts
Implemented backend and frontend support for user email verification. Added endpoints and controller logic to generate and send verification tokens, verify accounts, and restrict certain actions to verified users. Introduced new middleware, utility functions, and React components to handle the verification process and user feedback. Updated environment variables and dependencies to support email sending.

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,9 @@ JWT_SECRET = EduNexusSecret
 GOOGLE_CLIENT_ID = 423611856921-ipbfo8s4ts349tv55tfkbl9ivncc23bm.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET = 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
+
+FRONTEND_URL = http://localhost:5173
+
+EMAIL_USER = dulinagunarathna@gmail.com
+
+EMAIL_PASS = jjmk enbq kqrp czyf
