Integrate Gemini AI for dashboard content
Added Gemini API integration to backend and frontend for generating motivational quotes and study tips. Introduced new backend controller, router, and environment variables, and created corresponding frontend API service and student dashboard components. Updated dependencies to include @google/genai and related packages.

--- a/backend/.env
+++ b/backend/.env
@@ -15,3 +15,5 @@ FRONTEND_URL = http://localhost:5173
 EMAIL_USER = dulinagunarathna@gmail.com
 
 EMAIL_PASS = jjmk enbq kqrp czyf
+
+GEMINI_API_KEY = AIzaSyCSXHkc0M5Ze5FzdeMMb55viGyXZcP6264
