--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -31,7 +32,7 @@
     "dotenv": "^17.2.1",
     "formik": "^2.4.6",
     "html-to-text": "^9.0.5",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.541.0",
     "mime": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
