--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
+    "assemblyai": "^4.15.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +42,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
+    "react-speech-recognition": "^4.0.1",
+    "recordrtc": "^5.6.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "yup": "^1.6.1"
